--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 
         Amount <input type="number"  id="principal">  <br/>
         Rate <input type="range" min="1" max="100" value="50" id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        No. of Years <select  id="years"> 
+                          <option value="1">One</option>
+                          <option value="2">Two</option>
+                          <option value="3">Three</option>
+                          <option value="2">Two</option>
+                          <option value="3">Three</option>
+                      </select>
+        <br/>
+        <button onclick="compute()">Compute Interest</button>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
     </body>
 </html>
