--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         Amount <input type="number"  id="principal">  <br/>
         Rate <input type="range" min="1" max="100" value="50" id="rate">  <br/>
         No. of Years <select  id="years"> 
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
                       </select>
         <br/>
-        <button onclick="compute()">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button></br>
         Interest : <span id="result"></span><br>
 
     </body>
